fixed alignment and text flow in service desc page

--- a/style.css
+++ b/style.css
@@ -292,24 +292,33 @@ footer a{
 	align-self: center;
 	cursor: pointer;
 }
+/*#endregion*/
+
+/*#region Service Description Page Stuff*/
 
 .service-segment {
+	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	padding-bottom: 10%;
 }
 
-.service-segment article {
-	align-self: center;
-	/* align-items: center;
-	justify-content: center; */
-	width: 50%;
-	height: fit-content;
+.service-article {
+	margin-top: 2%;
+	margin-left: 20%;
+	margin-right: 20%;	
 }
 
-.service-segment img {
+.service-article img {
 	float: right;
-	width: 100px;
-	height: 100px;
+	margin-left: 1%;
+	max-width: 300px;
+	max-height: 300px;
+}
+
+.service-article p{
+	font-family: nimbus;
 }
 
 /*#endregion*/
@@ -333,6 +342,9 @@ footer a{
 	padding-top: 2%;
 	padding-bottom: 50%;
 	position: relative;
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-bottom: 2%;
 	/*height: 100%;*/
 }
 
